[package]
name = "dq_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
figment = { version = "0.10.19", features = ["json", "serde_json"] }
chrono = "0.4.38"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
surrealdb = "2.0.4"
mime = "0.3.17"
dotenv = "0.15.0"
